tests/transpiler/x/zig/string_compare.zig
// Generated by Mochi Zig transpiler on 2025-07-20 03:39 +0000
const std = @import("std");

pub fn main() void {
    std.debug.print("{any}\n", .{"a" < "b"});
    std.debug.print("{any}\n", .{"a" <= "a"});
    std.debug.print("{any}\n", .{"b" > "a"});
    std.debug.print("{any}\n", .{"b" >= "b"});
}
